[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lynyrd"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Robin van der Noord", email = "robinvandernoord@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Robin van der Noord/lynyrd#readme"
Issues = "https://github.com/Robin van der Noord/lynyrd/issues"
Source = "https://github.com/Robin van der Noord/lynyrd"

[tool.hatch.version]
path = "src/lynyrd/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lynyrd tests}"

[tool.coverage.run]
source_pkgs = ["lynyrd", "tests"]
branch = true
parallel = true
omit = [
  "src/lynyrd/__about__.py",
]

[tool.coverage.paths]
lynyrd = ["src/lynyrd", "*/lynyrd/src/lynyrd"]
tests = ["tests", "*/lynyrd/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
lynyrd = "lynyrd:main"
